--- a/TileServer/Config/renderd.conf
+++ b/TileServer/Config/renderd.conf
@@ -4,14 +4,14 @@ num_threads=4
 tile_dir=/var/lib/mod_tile
 stats_file=/var/run/renderd/renderd.stats
 
-;[renderd01]
+[renderd01]
 ;iphostname=::1
 ;ipport=7654
 ;num_threads=4
 ;tile_dir=rados://tiles/etc/ceph/ceph.conf
 ;stats_file=/var/run/renderd/renderd.stats
 
-;[renderd02]
+[renderd02]
 ;iphostname=::1
 ;ipport=7654
 ;num_threads=8
@@ -41,7 +41,7 @@ TILESIZE=256
 ;ASPECTY=1
 ;SCALE=1.0
 
-;[style2]
+[style2]
 ;URI=/osm_tiles2/
 ;TILEDIR=rados://tiles/etc/ceph/ceph.conf
 ;TILESIZE=512
