--- a/TileServer/Config/renderd.conf
+++ b/TileServer/Config/renderd.conf
@@ -4,36 +4,21 @@ num_threads=4
 tile_dir=/var/lib/mod_tile
 stats_file=/var/run/renderd/renderd.stats
 
-[renderd01]
-;iphostname=::1
-;ipport=7654
-;num_threads=4
-;tile_dir=rados://tiles/etc/ceph/ceph.conf
-;stats_file=/var/run/renderd/renderd.stats
-
-[renderd02]
-;iphostname=::1
-;ipport=7654
-;num_threads=8
-;tile_dir=memcached://
-;stats_file=/var/run/renderd/renderd.stats
-
 [mapnik]
-plugins_dir=/usr/lib/mapnik/input
+plugins_dir=/usr/local/lib/mapnik/input
 font_dir=/usr/share/fonts/truetype/dejavu
 font_dir_recurse=1
 
-[default]
-URI=/osm_tiles/
+[osmbright]
+URI=/osmbright/
 TILEDIR=/var/lib/mod_tile
 XML=/usr/local/share/maps/style/OSMBright/OSMBright.xml
 HOST=localhost
 TILESIZE=256
-;HTCPHOST=proxy.openstreetmap.org
-;MINZOOM=0
-;MAXZOOM=18
-;TYPE=png image/png
-;DESCRIPTION=This is a description of the tile layer used in the tile json request
+MINZOOM=0
+MAXZOOM=18
+TYPE=png image/png
+DESCRIPTION=Standard terratype server
 ;ATTRIBUTION=&copy;<a href=\"http://www.openstreetmap.org/\">OpenStreetMap</a> and <a href=\"http://wiki.openstreetmap.org/wiki/Contributors\">contributors</a>, <a href=\"http://opendatacommons.org/licenses/odbl/\">ODbL</a>
 ;SERVER_ALIAS=http://localhost/
 ;CORS=http://www.openstreetmap.org
@@ -41,18 +26,19 @@ TILESIZE=256
 ;ASPECTY=1
 ;SCALE=1.0
 
-[style2]
-;URI=/osm_tiles2/
-;TILEDIR=rados://tiles/etc/ceph/ceph.conf
-;TILESIZE=512
-;XML=/home/jburgess/osm/svn.openstreetmap.org/applications/rendering/mapnik/osm-local2.xml
-;HOST=tile.openstreetmap.org
-;HTCPHOST=proxy.openstreetmap.org
-;MINZOOM=0
-;MAXZOOM=22
-;TYPE=png image/png
-;DESCRIPTION=This is a description of the tile layer used in the tile json request
+[test]
+URI=/test/
+TILEDIR=/var/lib/mod_tile
+XML=/usr/local/share/maps/style/OSMBright/OSMBright.xml
+HOST=localhost
+TILESIZE=256
+MINZOOM=0
+MAXZOOM=24
+TYPE=png image/png
+DESCRIPTION=Test terratype server
 ;ATTRIBUTION=&copy;<a href=\"http://www.openstreetmap.org/\">OpenStreetMap</a> and <a href=\"http://wiki.openstreetmap.org/wiki/Contributors\">contributors</a>, <a href=\"http://opendatacommons.org/licenses/odbl/\">ODbL</a>
 ;SERVER_ALIAS=http://localhost/
-;CORS=*
-
+;CORS=http://www.openstreetmap.org
+;ASPECTX=1
+;ASPECTY=1
+;SCALE=1.0
