--- a/TileServer/Config V2/renderd.conf
+++ b/TileServer/Config V2/renderd.conf
@@ -4,20 +4,6 @@ num_threads=4
 tile_dir=/var/lib/mod_tile
 stats_file=/var/run/renderd/renderd.stats
 
-;[renderd01]
-;iphostname=::1
-;ipport=7654
-;num_threads=4
-;tile_dir=rados://tiles/etc/ceph/ceph.conf
-;stats_file=/var/run/renderd/renderd.stats
-
-;[renderd02]
-;iphostname=::1
-;ipport=7654
-;num_threads=8
-;tile_dir=memcached://
-;stats_file=/var/run/renderd/renderd.stats
-
 [mapnik]
 plugins_dir=/usr/lib/mapnik/3.0/input
 font_dir=/usr/share/fonts/truetype
@@ -26,18 +12,12 @@ font_dir_recurse=1
 [osmbright]
 URI=/osmbright/
 TILEDIR=/var/lib/mod_tile
-XML=/home/osm/openstreetmap-carto-2.41.0/style.xml
+XML=/usr/local/share/carto/openstreetmap-carto-2.41.0/style.xml
 HOST=tile.openstreetmap.org
 TILESIZE=256
-;HTCPHOST=proxy.openstreetmap.org
+HOST=localhost
+TILESIZE=256
 MINZOOM=0
 MAXZOOM=18
-;TYPE=png image/png
-;DESCRIPTION=This is a description of the tile layer used in the tile json request
-;ATTRIBUTION=&copy;<a href=\"http://www.openstreetmap.org/\">OpenStreetMap</a> and <a href=\"http://wiki.openstreetmap.org/wiki/Contributors\">contributors</a>, <a href=\"http://opendatacommons.org/licenses/odbl/\">ODbL</a>
-;SERVER_ALIAS=http://localhost/
-;CORS=http://www.openstreetmap.org
-;ASPECTX=1
-;ASPECTY=1
-;SCALE=1.0
+TYPE=png image/png
 
