Update iis map in view code

--- a/TileServer/Config V1/renderd.conf
+++ b/TileServer/Config V1/renderd.conf
@@ -32,8 +32,8 @@ TILEDIR=/var/lib/mod_tile
 XML=/usr/local/share/maps/style/OSMBright/OSMBright.xml
 HOST=localhost
 TILESIZE=256
-MINZOOM=0
-MAXZOOM=20
+minimum-scale-denominator'=0
+maximum-scale-denominator=20
 TYPE=png image/png
 DESCRIPTION=Test terratype server
 ;ATTRIBUTION=&copy;<a href=\"http://www.openstreetmap.org/\">OpenStreetMap</a> and <a href=\"http://wiki.openstreetmap.org/wiki/Contributors\">contributors</a>, <a href=\"http://opendatacommons.org/licenses/odbl/\">ODbL</a>
