--- a/TileServer/Config V2/renderd.conf
+++ b/TileServer/Config V2/renderd.conf
@@ -17,7 +17,7 @@ HOST=tile.openstreetmap.org
 TILESIZE=256
 HOST=localhost
 TILESIZE=256
-MINZOOM=0
-MAXZOOM=18
+minimum-scale-denominator=0
+maximum-scale-denominator=18
 TYPE=png image/png
 
