--- a/src/Terratype.BingMapsV8/Terratype.BingMapsV8.nuspec
+++ b/src/Terratype.BingMapsV8/Terratype.BingMapsV8.nuspec
@@ -11,12 +11,12 @@
     <iconUrl>https://github.com/Joniff/Terratype/blob/master/src/Terratype/Terratype.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
-    <releaseNotes>Init</releaseNotes>
+    <releaseNotes></releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>Umbraco Bing Maps Microsoft</tags>
     <dependencies>
       <dependency id="UmbracoCms.Core" version="7.0.0" />
-      <dependency id="Terratype" version="1.0.11" />
+      <dependency id="Terratype" version="1.0.12" />
     </dependencies>
   </metadata>
   <files>
