--- a/src/Terratype.GoogleMapsV3/Terratype.GoogleMapsV3.nuspec
+++ b/src/Terratype.GoogleMapsV3/Terratype.GoogleMapsV3.nuspec
@@ -6,16 +6,15 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>Joniff</owners>
-    <licenseUrl>https://github.com/Joniff/Terratype/blob/master/docs/Licence.txt</licenseUrl>
+    <licenseUrl>https://raw.githubusercontent.com/Joniff/Terratype/master/docs/Licence.txt</licenseUrl>
     <projectUrl>https://github.com/Joniff/Terratype</projectUrl>
-    <iconUrl>https://github.com/Joniff/Terratype/blob/master/src/Terratype/Terratype.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/Joniff/Terratype/master/src/Terratype/App_Plugins/Terratype/Images/Terratype.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2017</copyright>
     <tags>Umbraco Google Maps Gmaps Open Street View</tags>
     <dependencies>
-      <dependency id="UmbracoCms.Core" version="7.0.0" />
       <dependency id="Terratype" version="1.0.13" />
     </dependencies>
   </metadata>
