--- a/src/Terratype.nuget/packages.config
+++ b/src/Terratype.nuget/packages.config
@@ -26,7 +26,7 @@
   <package id="Microsoft.CodeAnalysis.CSharp" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.IO.RecyclableMemoryStream" version="1.2.0" targetFramework="net452" developmentDependency="true" />
-  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net452" developmentDependency="true" />
