--- a/src/Terratype/Terratype.nuspec
+++ b/src/Terratype/Terratype.nuspec
@@ -6,9 +6,9 @@
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>Joniff</owners>
-    <licenseUrl>https://github.com/Joniff/Terratype/blob/master/docs/Licence.txt</licenseUrl>
+    <licenseUrl>https://raw.githubusercontent.com/Joniff/Terratype/master/docs/Licence.txt</licenseUrl>
     <projectUrl>https://github.com/Joniff/Terratype</projectUrl>
-    <iconUrl>https://github.com/Joniff/Terratype/blob/master/src/Terratype/Terratype.png</iconUrl>
+    <iconUrl>https://raw.githubusercontent.com/Joniff/Terratype/master/src/Terratype/App_Plugins/Terratype/Images/Terratype.png</iconUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>$description$</description>
     <releaseNotes></releaseNotes>
