--- a/src/Terratype.TestSite/Web.config
+++ b/src/Terratype.TestSite/Web.config
@@ -55,6 +55,7 @@
     <add key="owin:appStartup" value="UmbracoDefaultOwinStartup" />
     <add key="Umbraco.ModelsBuilder.Enable" value="true" />
     <add key="Umbraco.ModelsBuilder.ModelsMode" value="PureLive" />
+    <add key="Umbraco.ModelsBuilder.EnableApi" value="true" />
   </appSettings>
   <connectionStrings>
     <remove name="umbracoDbDSN" />
