--- a/src/Terratype.TestSite/packages.config
+++ b/src/Terratype.TestSite/packages.config
@@ -48,6 +48,7 @@
   <package id="System.Reflection.Metadata" version="1.0.21" targetFramework="net452" />
   <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net452" />
   <package id="Umbraco.ModelsBuilder" version="3.0.7" targetFramework="net452" />
+  <package id="Umbraco.ModelsBuilder.Api" version="3.0.6" targetFramework="net452" />
   <package id="UmbracoCms" version="7.7.2" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.7.2" targetFramework="net452" />
   <package id="UrlRewritingNet" version="2.0.7" targetFramework="net452" />
