--- a/src/Terratype.ListView/packages.config
+++ b/src/Terratype.ListView/packages.config
@@ -2,7 +2,6 @@
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net452" />
   <package id="ClientDependency" version="1.9.2" targetFramework="net452" />
-  <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net452" />
   <package id="Examine" version="0.1.80" targetFramework="net452" />
   <package id="HtmlAgilityPack" version="1.4.9" targetFramework="net452" />
   <package id="ImageProcessor" version="2.5.1" targetFramework="net452" />
@@ -29,7 +28,7 @@
   <package id="MySql.Data" version="6.9.10" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
-  <package id="semver" version="1.1.2" targetFramework="net452" />
+  <package id="semver" version="1.1.2" targetFramework="net452" requireReinstallation="true" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
   <package id="UmbracoCms.Core" version="7.5.8" targetFramework="net452" />
   <package id="UrlRewritingNet" version="2.0.7" targetFramework="net452" />
