SSplit out searchers

--- a/src/Terratype/Terratype.csproj
+++ b/src/Terratype/Terratype.csproj
@@ -34,18 +34,22 @@
   <ItemGroup>
     <Compile Include="Frisk\Frisk.cs" />
     <Compile Include="Indexer\ContentService.cs" />
+    <Compile Include="Indexer\Helper.cs" />
     <Compile Include="Indexer\ProcessorService\DataTypeId.cs" />
     <Compile Include="Indexer\ProcessorService\Task.cs" />
-    <Compile Include="Indexer\Processors\Archetype.cs" />
-    <Compile Include="Indexer\Processors\Grid.cs" />
-    <Compile Include="Indexer\Processors\NestedContent.cs" />
+    <Compile Include="Indexer\Processors\ArchetypeProcessor.cs" />
+    <Compile Include="Indexer\Processors\TerratypeProcessor.cs" />
+    <Compile Include="Indexer\Processors\GridProcessor.cs" />
+    <Compile Include="Indexer\Processors\NestedContentProcessor.cs" />
     <Compile Include="Indexer\ProcessorService\PropertyBase.cs" />
-    <Compile Include="Indexer\Results.cs" />
-    <Compile Include="Indexer\Processors\Generic.cs" />
+    <Compile Include="Indexer\Entry.cs" />
+    <Compile Include="Indexer\Processors\GenericProcessor.cs" />
     <Compile Include="Indexer\Register.cs" />
+    <Compile Include="Indexer\Searchers\IAncestorSearch.cs" />
+    <Compile Include="Indexer\Searchers\ISearch.cs" />
     <Compile Include="Json\Json.cs" />
     <Compile Include="Labels\Standard.cs" />
-    <Compile Include="Models\Indexer.cs" />
+    <Compile Include="Indexer\Index.cs" />
     <Compile Include="Models\Label.cs" />
     <Compile Include="Options.cs" />
     <Compile Include="Models\LatLng.cs" />
