Sql Indexer creates content

--- a/src/Terratype.Indexer.Lucene/Lucene.csproj
+++ b/src/Terratype.Indexer.Lucene/Lucene.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Lucene.cs" />
+    <Compile Include="LuceneIndexer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
