--- a/src/Terratype.Indexer.Elasticsearch/Elasticsearch.csproj
+++ b/src/Terratype.Indexer.Elasticsearch/Elasticsearch.csproj
@@ -41,7 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Elasticsearch.cs" />
+    <Compile Include="ElasticsearchIndexer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
