--- a/src/Terratype.ListView/Terratype.ListView.csproj
+++ b/src/Terratype.ListView/Terratype.ListView.csproj
@@ -158,14 +158,16 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Plugins\Terratype.ListView\Lang\" />
-    <Folder Include="App_Plugins\Terratype.ListView\Scripts\" />
-    <Folder Include="App_Plugins\Terratype.ListView\Views\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Terratype\Terratype.csproj">
       <Project>{5034528f-401c-4fd4-8f42-23b378c7140d}</Project>
       <Name>Terratype</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="App_Plugins\Terratype.ListView\Scripts\terratype.listview.js" />
+    <Content Include="App_Plugins\Terratype.ListView\Views\config.html" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.1\tools\AutoMapper.targets')" />
