--- a/src/Terratype.TestSite/packages.config
+++ b/src/Terratype.TestSite/packages.config
@@ -40,7 +40,10 @@
   <package id="MySql.Data" version="6.9.10" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net452" />
   <package id="Our.Umbraco.CoreValueConverters" version="3.1.3" targetFramework="net452" />
+  <package id="Our.Umbraco.InnerContent" version="1.0.3" targetFramework="net452" />
+  <package id="Our.Umbraco.InnerContent.Core" version="1.0.3" targetFramework="net452" />
   <package id="Our.Umbraco.NestedContent" version="0.3.0" targetFramework="net452" />
+  <package id="Our.Umbraco.StackedContent" version="1.0.4" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="semver" version="1.1.2" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
