Speedup, 1.0.17, revamped Frisk

--- a/src/Terratype.BingMapsV8/BingMapsV8.csproj
+++ b/src/Terratype.BingMapsV8/BingMapsV8.csproj
@@ -12,6 +12,8 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -57,7 +59,13 @@
       <SubType>Designer</SubType>
     </Content>
     <Content Include="App_Plugins\Terratype.BingMapsV8\Scripts\Terratype.BingMapsV8.js" />
+    <Content Include="App_Plugins\Terratype.BingMapsV8\Scripts\Terratype.BingMapsV8.min.js">
+      <DependentUpon>Terratype.BingMapsV8.js</DependentUpon>
+    </Content>
     <Content Include="App_Plugins\Terratype.BingMapsV8\Scripts\Terratype.BingMapsV8.Renderer.js" />
+    <Content Include="App_Plugins\Terratype.BingMapsV8\Scripts\Terratype.BingMapsV8.Renderer.min.js">
+      <DependentUpon>Terratype.BingMapsV8.Renderer.js</DependentUpon>
+    </Content>
     <Content Include="App_Plugins\Terratype.BingMapsV8\Views\config.appearance.html" />
     <Content Include="App_Plugins\Terratype.BingMapsV8\Views\config.definition.html" />
     <Content Include="App_Plugins\Terratype.BingMapsV8\Views\config.search.html" />
@@ -66,6 +74,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="bundleconfig.json" />
     <None Include="packages.config" />
     <None Include="Terratype.BingMapsV8.nuspec">
       <SubType>Designer</SubType>
@@ -83,6 +92,13 @@
 xcopy "$(targetdir)*.nupkg" "$(solutiondir)nuget\" /Y
 </PostBuildEvent>
   </PropertyGroup>
+  <Import Project="..\..\packages\BuildBundlerMinifier.2.6.362\build\BuildBundlerMinifier.targets" Condition="Exists('..\..\packages\BuildBundlerMinifier.2.6.362\build\BuildBundlerMinifier.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\packages\BuildBundlerMinifier.2.6.362\build\BuildBundlerMinifier.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\BuildBundlerMinifier.2.6.362\build\BuildBundlerMinifier.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
