--- a/src/Terratype.LeafletV1/LeafletV1.csproj
+++ b/src/Terratype.LeafletV1/LeafletV1.csproj
@@ -12,6 +12,8 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -58,6 +60,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="bundleconfig.json" />
     <None Include="packages.config" />
     <None Include="Terratype.LeafletV1.nuspec">
       <SubType>Designer</SubType>
@@ -77,6 +80,16 @@
     <Content Include="App_Plugins\Terratype.LeafletV1\Lang\en-us.xml">
       <SubType>Designer</SubType>
     </Content>
+    <Content Include="App_Plugins\Terratype.LeafletV1\Scripts\leaflet-providers.min.js">
+      <DependentUpon>leaflet-providers.js</DependentUpon>
+    </Content>
+    <Content Include="App_Plugins\Terratype.LeafletV1\Scripts\Terratype.LeafletV1.Renderer.bundle.js" />
+    <Content Include="App_Plugins\Terratype.LeafletV1\Scripts\Terratype.LeafletV1.Renderer.bundle.min.js">
+      <DependentUpon>Terratype.LeafletV1.Renderer.bundle.js</DependentUpon>
+    </Content>
+    <Content Include="App_Plugins\Terratype.LeafletV1\Scripts\Terratype.LeafletV1.Renderer.min.js">
+      <DependentUpon>Terratype.LeafletV1.Renderer.js</DependentUpon>
+    </Content>
     <Content Include="App_Plugins\Terratype.LeafletV1\Scripts\tileservers.js" />
     <Content Include="App_Plugins\Terratype.LeafletV1\Scripts\leaflet-providers.js" />
     <Content Include="App_Plugins\Terratype.LeafletV1\Scripts\leaflet-src.js" />
@@ -85,6 +98,9 @@
     <Content Include="App_Plugins\Terratype.LeafletV1\Scripts\leaflet.markercluster.js" />
     <Content Include="App_Plugins\Terratype.LeafletV1\Scripts\Terratype.LeafletV1.js" />
     <Content Include="App_Plugins\Terratype.LeafletV1\Scripts\Terratype.LeafletV1.Renderer.js" />
+    <Content Include="App_Plugins\Terratype.LeafletV1\Scripts\tileservers.min.js">
+      <DependentUpon>tileservers.js</DependentUpon>
+    </Content>
     <Content Include="App_Plugins\Terratype.LeafletV1\Views\config.appearance.html" />
     <Content Include="App_Plugins\Terratype.LeafletV1\Views\config.definition.html" />
     <Content Include="App_Plugins\Terratype.LeafletV1\Views\config.search.html" />
@@ -96,6 +112,13 @@
     <PostBuildEvent>$(solutiondir)nuget\nuget.exe pack "$(ProjectPath)"
 xcopy "$(targetdir)*.nupkg" "$(solutiondir)nuget\" /Y</PostBuildEvent>
   </PropertyGroup>
+  <Import Project="..\..\packages\BuildBundlerMinifier.2.6.362\build\BuildBundlerMinifier.targets" Condition="Exists('..\..\packages\BuildBundlerMinifier.2.6.362\build\BuildBundlerMinifier.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Use NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\packages\BuildBundlerMinifier.2.6.362\build\BuildBundlerMinifier.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\BuildBundlerMinifier.2.6.362\build\BuildBundlerMinifier.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
