--- a/src/Terratype/packages.config
+++ b/src/Terratype/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" developmentDependency="true" />
+  <package id="BuildBundlerMinifier" version="2.6.362" targetFramework="net45" />
   <package id="ClientDependency" version="1.9.2" targetFramework="net45" developmentDependency="true" />
   <package id="ClientDependency-Mvc" version="1.8.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net45" developmentDependency="true" />
