--- a/src/Terratype.ListView/Terratype.ListView.csproj
+++ b/src/Terratype.ListView/Terratype.ListView.csproj
@@ -157,9 +157,7 @@
       <SubType>Designer</SubType>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="App_Plugins\Terratype.ListView\Lang\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\Terratype\Terratype.csproj">
       <Project>{5034528f-401c-4fd4-8f42-23b378c7140d}</Project>
@@ -167,6 +165,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <EmbeddedResource Include="App_Plugins\Terratype.ListView\Lang\en-us.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <Content Include="App_Plugins\Terratype.ListView\Scripts\terratype.listview.js" />
     <Content Include="App_Plugins\Terratype.ListView\Scripts\terratype.listview.min.js">
       <DependentUpon>terratype.listview.js</DependentUpon>
