--- a/src/Terratype.GoogleMapsV3/packages.config
+++ b/src/Terratype.GoogleMapsV3/packages.config
@@ -1,8 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BuildBundlerMinifier" version="2.6.362" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" developmentDependency="true" />
-  <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" developmentDependency="true" />
-  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" developmentDependency="true" />
-  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" developmentDependency="true" />
+  <package id="BuildBundlerMinifier" version="2.6.362" targetFramework="net45" developmentDependency="true" />
+  <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net45" developmentDependency="true" />
 </packages>
