--- a/src/Terratype.LeafletV1/Terratype.LeafletV1.nuspec
+++ b/src/Terratype.LeafletV1/Terratype.LeafletV1.nuspec
@@ -2,7 +2,7 @@
 <package>
   <metadata>
     <id>Terratype.LeafletV1</id>
-    <version>$version$</version>
+    <version>1.0.18</version>
     <title>$title$</title>
     <authors>$author$</authors>
     <owners>Joniff</owners>
@@ -15,7 +15,7 @@
     <copyright>Copyright 2017</copyright>
     <tags>Umbraco Google Maps Open Street View leaflet</tags>
     <dependencies>
-      <dependency id="Terratype" version="1.0.17" />
+      <dependency id="Terratype" version="1.0.18" />
     </dependencies>
   </metadata>
   <files>
