--- a/src/Terratype/packages.config
+++ b/src/Terratype/packages.config
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="AutoMapper" version="3.3.1" targetFramework="net45" developmentDependency="true" />
-  <package id="BuildBundlerMinifier" version="2.6.362" targetFramework="net45" />
+  <package id="BuildBundlerMinifier" version="2.6.362" targetFramework="net45" developmentDependency="true" />
   <package id="ClientDependency" version="1.9.2" targetFramework="net45" developmentDependency="true" />
   <package id="ClientDependency-Mvc" version="1.8.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="ClientDependency-Mvc5" version="1.8.0.0" targetFramework="net45" developmentDependency="true" />
@@ -9,8 +9,8 @@
   <package id="HtmlAgilityPack" version="1.4.9.5" targetFramework="net45" developmentDependency="true" />
   <package id="ImageProcessor" version="2.5.6" targetFramework="net45" developmentDependency="true" />
   <package id="ImageProcessor.Web" version="4.8.7" targetFramework="net45" developmentDependency="true" />
-  <package id="log4net" version="2.0.8" targetFramework="net45" />
-  <package id="Log4Net.Async" version="2.0.4" targetFramework="net45" />
+  <package id="log4net" version="2.0.8" targetFramework="net45" developmentDependency="true" />
+  <package id="Log4Net.Async" version="2.0.4" targetFramework="net45" developmentDependency="true" />
   <package id="Lucene.Net" version="2.9.4.1" targetFramework="net45" developmentDependency="true" />
   <package id="Markdown" version="1.14.7" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" developmentDependency="true" />
@@ -18,7 +18,7 @@
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.AspNet.Mvc.FixedDisplayModes" version="5.0.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net45" developmentDependency="true" />
-  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.2.1" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net45" developmentDependency="true" />
@@ -37,7 +37,7 @@
   <package id="Owin" version="1.0" targetFramework="net45" developmentDependency="true" />
   <package id="semver" version="1.1.2" targetFramework="net45" developmentDependency="true" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net45" developmentDependency="true" />
-  <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net45" />
+  <package id="System.Threading.Tasks.Dataflow" version="4.7.0" targetFramework="net45" developmentDependency="true" />
   <package id="UmbracoCms.Core" version="7.5.14" targetFramework="net45" developmentDependency="true" />
   <package id="UrlRewritingNet" version="2.0.7" targetFramework="net45" developmentDependency="true" />
   <package id="xmlrpcnet" version="2.5.0" targetFramework="net45" developmentDependency="true" />
