--- a/src/Providers/BingMapsV8/BingMapsV8.csproj
+++ b/src/Providers/BingMapsV8/BingMapsV8.csproj
@@ -215,6 +215,9 @@
     <Content Include="App_Plugins\Terratype.BingMapsV8\Lang\en-us.xml" />
     <Content Include="App_Plugins\Terratype.BingMapsV8\Scripts\Terratype.BingMapsV8.js" />
     <Content Include="App_Plugins\Terratype.BingMapsV8\Scripts\Terratype.BingMapsV8.Renderer.js" />
+    <Content Include="App_Plugins\Terratype.BingMapsV8\Scripts\Terratype.BingMapsV8.Renderer.min.js">
+      <DependentUpon>Terratype.BingMapsV8.Renderer.js</DependentUpon>
+    </Content>
     <Content Include="App_Plugins\Terratype.BingMapsV8\Views\config.appearance.html" />
     <Content Include="App_Plugins\Terratype.BingMapsV8\Views\config.definition.html" />
     <Content Include="App_Plugins\Terratype.BingMapsV8\Views\config.search.html" />
