--- a/src/Providers/LeafletV1/bundleconfig.json
+++ b/src/Providers/LeafletV1/bundleconfig.json
@@ -18,10 +18,20 @@
     ]
   },
   {
-    "outputFileName": "App_Plugins/Terratype.LeafletV1/Scripts/Terratype.LeafletV1.Renderer.bundle.js",
+    "outputFileName": "App_Plugins/Terratype.LeafletV1/Scripts/Terratype.LeafletV1.Renderer.bundle.min.js",
     "inputFiles": [
+      "App_Plugins/Terratype.LeafletV1/Scripts/leaflet-providers.js",
       "App_Plugins/Terratype.LeafletV1/Scripts/leaflet-src.js",
       "App_Plugins/Terratype.LeafletV1/Scripts/leaflet.markercluster-src.js",
+      "App_Plugins/Terratype.LeafletV1/Scripts/Terratype.LeafletV1.Renderer.js",
+      "App_Plugins/Terratype.LeafletV1/Scripts/tileservers.js"
+    ]
+  },
+  {
+    "outputFileName": "App_Plugins/Terratype.LeafletV1/Scripts/Terratype.LeafletV1.Renderer.bundle.js",
+    "inputFiles": [
+      "App_Plugins/Terratype.LeafletV1/Scripts/leaflet.js",
+      "App_Plugins/Terratype.LeafletV1/Scripts/leaflet.markercluster.js",
       "App_Plugins/Terratype.LeafletV1/Scripts/tileservers.js",
       "App_Plugins/Terratype.LeafletV1/Scripts/Terratype.LeafletV1.Renderer.js"
     ]
